# mariadb-db-agents

./: .env.example  .gitignore  AGENT_REQUIREMENTS.md  CHANGELOG.md  CONTRIBUTING.md  GIT_SETUP.md  LICENSE  MIGRATION_NOTES.md  NEXT_STEPS.md  QUICK_START.md  QUICK_TEST.md  README.md  RUN_INCIDENT_TRIAGE.sh  TESTING_GUIDE.md  TEST_RESULTS.md  UPDATE_DB_CONFIG.md  UPDATE_ENV.sh  USAGE.md  __init__.py  enable_performance_schema.sql  mariadb-db-agents  pyproject.toml  requirements.txt
agents/: __init__.py
agents/database_inspector/: INSPECTOR_PLAN.md  __init__.py  agent.py  main.py  tools.py
agents/incident_triage/: PERFORMANCE_SCHEMA_INTEGRATION.md  QUICK_TEST.md  README.md  TESTING_GUIDE.md  TEST_RESULTS.md  TEST_SCENARIOS.md  TEST_SUMMARY.md  __init__.py  agent.py  main.py  tools.py
agents/replication_health/: REPLICATION_DATA_GATHERING.md  SKYSQL_REPLICATION_APPROACH.md  __init__.py  agent.py  main.py  tools.py
agents/running_query/: __init__.py  agent.py  conversation.py  main.py  tools.py
agents/slow_query/: __init__.py  agent.py  conversation.py  main.py  tools.py
cli/: __init__.py  main.py
common/: __init__.py  config.py  db_client.py  guardrails.py  observability.py  observability_tools.py  performance_metrics.py  performance_tools.py  sys_schema_tools.py
docs/: ARCHITECTURE_DIAGRAM.md  HIGH_VALUE_AUTOMATION_OPPORTUNITIES.md  MCP_SETUP.md  PYPROJECT_EXPLANATION.md  PYPROJECT_QUICK_GUIDE.md  SAMPLE_DBA_QUESTIONS.md
mcp_server/: README.md  TEST_RESULTS.md  __init__.py  cursor_config_example.json  main.py  test_mcp.py  tools.py
orchestrator/: ADVANCED_WORKFLOWS.md  ORCHESTRATOR_PLAN.md  README.md  __init__.py  agent.py  conversation.py  main.py  tools.py
scripts/: TEST_SKYSQL_LOGS.md  comprehensive_workload_test.py  create_incident_test_scenarios.py  generate_slow_queries.py  generate_slow_queries_reviewed.py  skysql_observability_snapshot.py  test_error_log_extraction.py  test_incident_triage.py  test_observability_snapshot.py  test_skysql_error_logs.py
tests/: test_imports.py
