[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mariadb-db-agents"
version = "0.1.0"
description = "AI-powered agents for MariaDB database management and optimization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MariaDB Corporation"}
]
keywords = ["mariadb", "database", "ai", "agents", "optimization", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openai-agents>=0.6.0",
    "mysql-connector-python>=9.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "python-dateutil>=2.8.0",
    "mcp>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
mariadb-db-agents = "mariadb_db_agents.cli.main:main"
mariadb-db-agents-mcp = "mariadb_db_agents.mcp_server.main:main"

[tool.setuptools]
package-dir = {"mariadb_db_agents" = "."}
packages = ["mariadb_db_agents", "mariadb_db_agents.agents", "mariadb_db_agents.agents.slow_query", "mariadb_db_agents.agents.running_query", "mariadb_db_agents.agents.incident_triage", "mariadb_db_agents.agents.replication_health", "mariadb_db_agents.agents.database_inspector", "mariadb_db_agents.cli", "mariadb_db_agents.common", "mariadb_db_agents.orchestrator", "mariadb_db_agents.mcp_server"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313', 'py314', 'py315',]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

